# babelgraph

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: dev.txt  tutoring_workflow_spec.txt
docs/mirascope/: mirascope-provider-agnostic.md  mirascope.md
examples/base/: 01_custom_tool_agent.py  02_local_runtime_agent.py  03_agent_steps_and_history.py  04_custom_runtime_agent.py  05_structured_agent.py
examples/discord/: chatbot.py  local_reader_agent.py  readme.md  run_bot.py
examples/graph/: 01_structured_workflow.py  02_reflection_workflow.py  03_student_teacher_workflow.py  03_tutor_workflow.py  04_parallel_story_workflow.py  05_discord_channel_analysis.py  06_discord_newsletter_workflow.py  08_discord_agent.py
examples/graph/generations/: newsletter0.md
examples/graph/templates/: example_newsletter.md
src/: __init__.py
src/babelgraph/: __init__.py
src/babelgraph/core/: __init__.py  logging.py  runtime.py
src/babelgraph/core/agent/: __init__.py  base.py
src/babelgraph/core/graph/: __init__.py  base.py  state.py  viz.py
src/babelgraph/core/graph/nodes/: __init__.py  actions.py  agent.py
src/babelgraph/core/graph/nodes/base/: __init__.py  node.py
src/babelgraph/core/tools/: __init__.py  image_generator.py
src/babelgraph/extensions/discord/: runtime.py
src/core/: __init__.py
src/core/agent/: base.py  logging.py  runtime.py
src/core/graph/: __init__.py  base.py  state.py  viz.py
src/core/graph/nodes/: __init__.py  actions.py  agent.py  context.py  terminal.py
src/core/graph/nodes/base/: __init__.py  node.py
src/core/tools/: __init__.py  calculator.py  discord_toolkit.py
src/extensions/discord/: __init__.py  client.py  runtime.py
src/tests/: __init__.py
src/tests/core/agent/: conftest.py  test_base.py  test_runtime.py
src/tests/core/graph/: __init__.py  test_base.py  test_config.py  test_state.py
src/tests/core/graph/nodes/: __init__.py  test_actions.py  test_agent.py  test_base.py
