[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babelgraph"
version = "0.1.0"
description = "Lightweight graph orchestration library for multi-agent systems"
authors = [
    { name = "Kenneth Cavanagh", email = "ken@agency42.com" },
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.6.1",
    "mirascope>=0.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "typing-extensions>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/k3nnethfrancis/babelgraph"
Repository = "https://github.com/k3nnethfrancis/babelgraph"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: mark test as async using asyncio"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
