[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "babelgraph"
version = "0.1.0"
description = "Lightweight graph orchestration library for multi-agent systems"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.6.1",
    "mirascope>=0.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "typing-extensions>=4.0.0",
    "tenacity>=8.2.0",
    "openpipe>=4.40.0",
    "aiohttp>=3.11.0",
    "discord.py>=2.4.0",
    "pillow>=11.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: mark test as async using asyncio"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
