[metadata]
name = babelgraph
version = 0.1.0
description = Lightweight graph orchestration library for multi-agent systems
author = Kenneth Cavanagh
author_email = ken@agency42.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11,<3.12
install_requires =
    pydantic>=2.6.1
    mirascope>=0.7.0
    pytest>=8.0.0
    pytest-asyncio>=0.23.5
    typing-extensions>=4.0.0
    tenacity>=8.2.0
    openpipe>=4.40.0
    aiohttp>=3.11.0
    discord.py>=2.4.0
    pillow>=11.0.0

[options.packages.find]
where = src
